--- a/learning_diary/WEEK1.qmd
+++ b/learning_diary/WEEK1.qmd
@@ -1,8 +1,6 @@
 # WEEK1
 
-This is a book created from markdown and executable code.
-
-See @knuth84 for additional discussion of literate programming.
+test
 
 ## Summary
 
