--- a/learning_diary/index.qmd
+++ b/learning_diary/index.qmd
@@ -1,8 +1,6 @@
 # Preface {.unnumbered}
 
-This is a Quarto book.
-
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
+This is a learning diary of CASA0023 from Xianlai Yin.
 
 ```{r}
 1 + 1
