--- a/learning_diary/WEEK2.qmd
+++ b/learning_diary/WEEK2.qmd
@@ -3,3 +3,13 @@
 #### ***Portfolio tools: Xaringan and Quarto*** {.unnumbered}
 
 > This is a learning diary of CASA0023 WEEK 2, the lecture presentation is [here](https://andrewmaclachlan.github.io/CASA0023-lecture-2/#1), and the practical material is [here](https://andrewmaclachlan.github.io/CASA0023/2_portfolio.html).
+
+### *Introduction to Hyperspectral Radiometer (Homework)*
+
+[This website](https://xianlaiyin.github.io/learning_diary/docs/) and [this slide](https://xianlaiyin.github.io/week2_xaringan/) can be used as a practical presentation of the content of this week.
+
+```{r, echo = FALSE, out.width='40%'}
+xaringanExtra::embed_xaringan(
+  url = "https://xianlaiyin.github.io/week2_xaringan/",
+  ratio = "16:9")
+```
