--- a/learning_diary/references.bib
+++ b/learning_diary/references.bib
@@ -17,3 +17,20 @@
 }
 
 
+@article{abbas_characterizing_2021,
+	title = {Characterizing and classifying urban tree species using bi-monthly terrestrial hyperspectral images in {Hong} {Kong}},
+	volume = {177},
+	issn = {0924-2716},
+	url = {https://www.sciencedirect.com/science/article/pii/S0924271621001283},
+	doi = {10.1016/j.isprsjprs.2021.05.003},
+	abstract = {Urban trees exhibit a wide range of ecosystem services that have long been unveiled and increasingly reported. The ability to map tree species and analyze tree health conditions would become vividly essential. Remote sensing techniques, especially hyperspectral imaging, are being evolved for species identification and vegetation monitoring from spectral reponse patterns. In this study, a hyperspectral library for urban tree species in Hong Kong was established comprising 75 urban trees belonging to 19 species. 450 bi-monthly images were acquired by a terrestrial hyperspectral camera (SPECIM-IQ) from November 2018 to October 2019. A Deep Neural Network classification model was developed to identify tree species from the hyperspectral imagery with an overall accuracy ranging from 85\% to 96\% among different seasons. Representative spectral reflectance curves of healthy and unhealthy conditions for each species were extracted and analyzed. The hyperspectral phenology models were developed to achieve high accuracy and optimization of data acquisition. The bi-monthly canopy signatures and vegetation indices revealed different seasonality patterns of evergreen and deciduous species in Hong Kong. We explored the utility of terrestrial hyperspectral remote sensing and Deep Neural Network for urban tree species identification and characterizing. This provides a unique baseline to understand hyperspectral characteristics and seasonality of urban tree species in Hong Kong that can also contribute to hyperspectral imaging and database development elsewhere in the world.},
+	language = {en},
+	urldate = {2023-03-21},
+	journal = {ISPRS Journal of Photogrammetry and Remote Sensing},
+	author = {Abbas, Sawaid and Peng, Qian and Wong, Man Sing and Li, Zhilin and Wang, Jicheng and Ng, Kathy Tze Kwun and Kwok, Coco Yin Tung and Hui, Karena Ka Wai},
+	month = jul,
+	year = {2021},
+	keywords = {Deep learning, Hyperspectral library, Seasonality, SPECIM-IQ, Tree species, Urban tree},
+	pages = {204--216},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\xianl\\Zotero\\storage\\TGINT9NI\\Abbas 等 - 2021 - Characterizing and classifying urban tree species .pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\xianl\\Zotero\\storage\\XP4QHLYU\\S0924271621001283.html:text/html},
+}
