--- a/learning_diary/WEEK2.qmd
+++ b/learning_diary/WEEK2.qmd
@@ -4,7 +4,7 @@
 
 > This is a learning diary of CASA0023 WEEK 2, the lecture presentation is [here](https://andrewmaclachlan.github.io/CASA0023-lecture-2/#1), and the practical material is [here](https://andrewmaclachlan.github.io/CASA0023/2_portfolio.html).
 
-### **Introduction to Hyperspectral Radiometer (Homework)**
+### **Homework: Introduction to Hyperspectral Radiometer**
 
 [This website](https://xianlaiyin.github.io/learning_diary/docs/) and [this slide](https://xianlaiyin.github.io/week2_xaringan/week2_xaringan.html#1) can be used as a practical presentation of the content of this week.
 
